# GeneticAlgortihmForChessPropertiesStudy

./: CMakeLists.txt  LICENSE.txt  README.md
GeneticAlgortihmForChessPropertiesStudy/: CMakeLists.txt  GeneticAlgortihmForChessPropertiesStudy.cpp  GeneticAlgortihmForChessPropertiesStudy.h  LinkedIn post.txt  Readme.md  main.cpp  operations.cpp  operations.h  plottingTools.cpp  plottingTools.h  position.cpp  position.h  statistics.cpp  statistics.h  thc.cpp  thc.h
